--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Game Time</title>
 </head>
 <body>
-
+  <canvas id="board" width="450" height="450"></canvas>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="main.bundle.js"></script>
 </body>
 </html>
