--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Game Time</title>
 </head>
 <body>
-  <canvas id="board" width="675" height="675"></canvas>
+  <canvas id="board" width="675" height="675" style="padding: 0; margin: auto; display: block;"></canvas>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="main.bundle.js"></script>
 </body>
