add local images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <canvas id="board" width="510" height="510"></canvas>
     <div class="game-info">
       <h2>Instructions</h2>
-      <p class="instructions">Move: <br><img src="http://web1.nambuccahd-h.schools.nsw.edu.au/mediawiki/images/a/a4/Arrow-keys.png" style="padding-left: 52px;">
+      <p class="instructions">Move: <br><img src="assets/arrow-keys.png" style="padding-left: 52px;">
       </p>
       <p class="instructions">Eat:
         <ul>
