add score titles to html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
           <li><img src="lib/10.png"> 500</li>
         </ul>
       </p>
+      <p class="instructions" style="padding-top: 150px;"><br>HIGH SCORE:</p>
+      <p id="high-score" class="score">N/A</p>
+      <p class="instructions">LAST GAME:</p>
+      <p id="last-game-score" class="score">N/A</p>
     </div>
   </div>
 </body>
