--- a/test.html
+++ b/test.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <title>Test Suite - Game Time</title>
 </head>
+
 <body>
-
-
-  <script src="test.bundle.js"></script>
+<div class="game-box" style="display: none;">
+  <h1>SNAKE</h1>
+  <canvas id="board" width="510" height="510"></canvas>
+</div>
 </body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="main.bundle.js"></script>
+<script src="test.bundle.js"></script>
+
 </html>
+
